<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBA7A7"
    android:padding="@dimen/normal">

    <LinearLayout
        android:id="@+id/layout_searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_edittext_background"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".9"
            android:background="@drawable/search_edittext_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/auto_fill_hint"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:layout_weight=".1"
            android:background="@drawable/search_edittext_background"
            android:contentDescription="@string/search"
            android:elevation="8dp"
            android:src="@drawable/ic_search"
            android:text="@string/go" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_searchEditText">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/ic_movie_filter" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font_family"
            android:text="@string/welcome_text"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/my_font_family"
            android:text="@string/search_movie"
            android:textColor="#888888"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesSearchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_searchEditText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/ic_movie_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
